src/test/deca/syntax/parser/invalid/bracket_not_opened.deca
{
    x = 2 * 3 + 4) ;
}

//# src/test/deca/syntax/parser/invalid/bracket_not_opened.deca:2:17: extraneous input ')' expecting ';'
